--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/styles": "^5.15.16",
     "@mui/system": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-animations": "^1.0.0",
     "react-dom": "^18.3.1",
